# dalek_laser

./: .dockerignore  .gitmodules  Dockerfile  README.md  compose.yaml  dalek_viewer.rviz  desktop_custom.env  local_cam.env  local_scanner.env  robot.env  saveMap.bash
be_quals_bags/: auto_2024-10-13-08-17-18_0.bag  auto_2024-10-13-08-17-18_0.bag.active  auto_2024-10-13-08-17-21_0.bag.active  auto_2024-10-13-08-22-18_1.bag.active  auto_2024-10-13-08-22-19_1.bag  auto_2024-10-13-08-27-19_2.bag  auto_2024-10-13-08-32-19_3.bag  auto_2024-10-13-08-35-05_0.bag.active  auto_2024-10-13-08-37-19_4.bag  auto_2024-10-13-08-38-54_0.bag.active
photonvision/: Dockerfile  get_arch_name.sh
ros_ws/src/amcl/examples/: amcl_diff.launch
ros_ws/src/bag_manager/: CMakeLists.txt  package.xml  view_bag.rviz
ros_ws/src/bag_manager/launch/: auto_bagger.launch  play_with_tf.launch
ros_ws/src/bag_manager/src/: odometry_republisher_node.cpp
ros_ws/src/dalek_apriltag/: CMakeLists.txt  package.xml
ros_ws/src/dalek_apriltag/config/: apriltag_estimator_params.yaml  arducam_calib.yaml  arducam_controls.yaml  reefscape.yaml  tags.yaml
ros_ws/src/dalek_apriltag/launch/: apriltag_detector.launch  publish_arducam.launch
ros_ws/src/dalek_apriltag/src/: apriltag_robot_pose.py
ros_ws/src/dalek_mapping/: CMakeLists.txt  package.xml
ros_ws/src/dalek_mapping/launch/: slam.launch
ros_ws/src/frc_basics/: CMakeLists.txt  package.xml
ros_ws/src/frc_basics/config/: drivetrain_interface_params.yaml  fms_params.yaml
ros_ws/src/frc_basics/include/DrivetrainInterface/: DrivetrainInterfaceNode.h  DrivetrainInterfaceParams.h  DrivetrainInterfaceTable.h
ros_ws/src/frc_basics/include/FmsInfo/: FmsInfoNode.h  FmsInfoParams.h  FmsInfoTable.h
ros_ws/src/frc_basics/include/boost/signals2/detail/: auto_buffer.hpp
ros_ws/src/frc_basics/launch/: drivetrain_interface.launch  fms_info.launch  ros_bridge.launch
ros_ws/src/frc_basics/src/DrivetrainInterface/: DrivetrainInterfaceClass.cpp  DrivetrainInterfaceNode.cpp  DrivetrainInterfaceTable.cpp
ros_ws/src/frc_basics/src/FmsInfo/: FmsInfoClass.cpp  FmsInfoNode.cpp  FmsInfoTable.cpp
ros_ws/src/frc_sim_gazebo/: CMakeLists.txt  package.xml
ros_ws/src/frc_sim_gazebo/launch/: frc_sim.launch  frc_world.launch  spawn_robot.launch
ros_ws/src/frc_sim_gazebo/models/reefscape_field/: model.config  model.sdf
ros_ws/src/frc_sim_gazebo/models/robot/lidar_stand/: model.config  model.sdf
ros_ws/src/frc_sim_gazebo/src/: republish_laser_now.py  update_gazebo_pose.py
ros_ws/src/frc_sim_gazebo/worlds/: reefscape.world
ros_ws/src/laser_filter/: CMakeLists.txt  package.xml
ros_ws/src/laser_filter/config/: laser_filter.yaml
ros_ws/src/laser_filter/launch/: t_laser_filter.launch
ros_ws/src/olarta/: CMakeLists.txt  README.md  cleanupData.py  package.xml
ros_ws/src/olarta/launch/: localize.launch
ros_ws/src/olarta/src/: main.cpp  main.hpp
ros_ws/src/pose_fusion/: CMakeLists.txt  package.xml
ros_ws/src/pose_fusion/launch/: localize.launch
ros_ws/src/scan_filter/: CMakeLists.txt  package.xml
ros_ws/src/scan_filter/conf/: triton_config.yaml
ros_ws/src/scan_filter/launch/: filter.launch
ros_ws/src/slam_toolbox/config/: mapper_params_localization.yaml  mapper_params_offline.yaml  mapper_params_offline_local.yaml
ros_ws/src/slam_toolbox/launch/: localization.launch  offline_local.launch
ros_ws/src/slam_toolbox/src/: slam_toolbox_localization.cpp
ros_ws/src/slam_toolbox_msgs/srv/: DeserializePoseGraph.srv
