<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frc_basics</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chuckellison@hotmail.com">origin</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <!-- <depend>std_srvs</depend> -->
  <!-- <depend>nodelet</depend> -->
  <!-- <depend>diagnostic_updater</depend> -->

  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>frc_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export> -->
</package>
